syntax = "proto3";

package tracerpb;

option go_package = "github.com/sagnik3788/dapper-go/pkg/proto/tracerpb;tracerpb";

service Collector {
  rpc Collect(ExportRequest) returns (ExportResponse);
}

message ExportRequest {
  repeated Span spans = 1;
}

message ExportResponse {
  bool ok = 1;
}

message Span {
  uint64 trace_id = 1;
  uint64 span_id = 2;
  uint64 parent_id = 3;

  string name = 4;

  int64 start_time_unix_nano = 5;
  int64 end_time_unix_nano = 6;
}
